fix header logo position on mobile

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -11,7 +11,9 @@
     cursor: pointer;
     &__logo {
       width: 201px;
-      margin-left: 40px;
+      @media (min-width: 768px) {
+        margin-left: 40px;
+      }
     }
   }
 }
